add social-media links

--- a/blog/templates/portfolio.html
+++ b/blog/templates/portfolio.html
@@ -11,10 +11,10 @@
         <a href="about.html">Find out more about me</a>
     </div><!--//bio-->
     <ul class="social-list list-inline mx-auto">
-        <li class="list-inline-item"><a href="#" class="h3"><i class="icon-github"></i></a></li>
-        <li class="list-inline-item"><a href="#" class="h3"><i class="icon-linkedin"></i></a></li>
-        <li class="list-inline-item"><a href="#" class="h3"><i class="icon-twitter"></i></a></li>
-        <li class="list-inline-item"><a href="#" class="h3"><i class="icon-telegram"></i></a></li>
+        <li class="list-inline-item"><a href="https://github.com/akfaqih3" class="h3"><i class="icon-github"></i></a></li>
+        <li class="list-inline-item"><a href="https://www.linkedin.com/in/akram-qasem-472876251/" class="h3"><i class="icon-linkedin"></i></a></li>
+        <li class="list-inline-item"><a href="https://x.com/akfaqih3" class="h3"><i class="icon-twitter"></i></a></li>
+        <li class="list-inline-item"><a href="https://t.me/akfaqih" class="h3"><i class="icon-telegram"></i></a></li>
         
     </ul><!--//social-list-->
     <hr> 
