--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -22,7 +22,14 @@
         <div class="tag-widget post-tag-container mb-5 mt-5">
         <div class="tagcloud">
             {% for tag in post.tags.all  %}
-            <a href="{% url 'blog:post_list_by_tag' tag.slug %}" class="tag-cloud-link">{{tag}}</a>
+            <a href="#" class="tag-cloud-link bg-white shadow-sm text-info"
+                hx-get="{% url 'blog:post_list_by_tag' tag.slug %}"
+                hx-trigger="click"
+                hx-target="#main_section"
+                hx-swap="innerHTML"
+            >
+            {{tag}}
+            </a>
             {% endfor %}
         </div>
         </div>
