add portfolio link

--- a/blog/templates/portfolio.html
+++ b/blog/templates/portfolio.html
@@ -8,7 +8,7 @@
         <p >
             Hi, I'm Akram Qasem. Software engineer ,Django Developer.
         </p>
-        <a href="about.html">Find out more about me</a>
+        <a href="https://akfaqih3.github.io/Portfolio/" target="_blank">Find out more about me</a>
     </div><!--//bio-->
     <ul class="social-list list-inline mx-auto">
         <li class="list-inline-item"><a href="https://github.com/akfaqih3" class="h3"><i class="icon-github"></i></a></li>
